--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,20 +1,23 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    margin-top: 70px;
-    background-color: black;
-    color: #39FF14; /* Fosforlu yeşil */
+    margin-top: 50px;
+    background-color: white;
+    color: #39FF14;
 }
-
 input {
     padding: 10px;
     font-size: 16px;
     background-color: black;
     color: #39FF14;
     border: 2px solid #39FF14;
-    width: 70%; /* Genişliği %70 olarak ayarladık */
+    width: 70%;
 }
-
+img {
+    max-width: 10%;
+    height: auto;
+    margin-bottom: 50px;
+}
 button {
     padding: 10px 20px;
     font-size: 16px;
@@ -23,41 +26,38 @@ button {
     border: none;
     cursor: pointer;
 }
-
 button:hover {
-    background-color: #28a745; /* Koyu yeşil */
+    background-color: #28a745;
     color: white;
 }
-
 a {
-    color: #28a745; /* Fosforlu yeşilin koyu tonu */
+    color: #28a745;
     text-decoration: none;
 }
-
 a:hover {
     text-decoration: underline;
 }
-
 #result {
     margin-top: 20px;
     font-size: 18px;
+    background-color: #1A3636;
+    padding: 10px;
+    display: none;
+    border-radius: 5px;
 }
-
 .copy-icon {
     margin-left: 10px;
-    font-size: 20px;
+    font-size: 14px;
     cursor: pointer;
-    vertical-align: middle; /* İkonu metinle hizalamak için */
-    color: #39FF14; /* İkon rengi fosforlu yeşil */
+    vertical-align: top;
+    color: #39FF14;
 }
-
 .copy-icon:hover {
-    color: #28a745; /* İkon üzerine gelindiğinde renk değişimi */
+    color: #28a745;
 }
-
 #tooltip {
-    display: none; /* Başlangıçta tooltip gizli olacak */
+    display: none;
     margin-top: 10px;
     font-size: 16px;
-    color: #28a745; /* Tooltip rengi */
+    color: #28a745;
 }
