--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Bozkurt URL Shortener</title>
+        <title>URL Shortener</title>
         <link
             href="/static/css/bootstrap/5.3.3/bootstrap.min.css"
             rel="stylesheet"
