--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,60 @@
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+h2 {
+    font-weight: 700;
+    font-size: 2.5rem;
+}
+
+p {
+    font-weight: 400;
+    font-size: 1.25rem;
+}
+
+.btn-success {
+    font-weight: 700;
+    font-size: 1.25rem;
+}
+
 .copy-icon {
     cursor: pointer;
     vertical-align: top;
 }
+
 #banner {
-    height: 100px; /* Adjust the height as necessary */
+    height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.centered-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    flex-direction: column;
+}
+
+.input-group {
+    width: 100%;
+}
+
+.form-container {
+    max-width: 500px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.btn-success {
+    width: 100%;
+}
+
+.alert-container {
+    min-height: 150px;
+    margin-top: 20px;
 }
