--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,11 @@
                 </div>
             </div>
         </div>
+        <footer class="footer">
+            <a href="https://github.com/bariiss/url-shortener" target="_blank">
+                <img src="/static/img/github.png" alt="GitHub Logo">
+            </a>
+        </footer>
         <script src="https://unpkg.com/htmx.org"></script>
         <script src="/static/js/main.js"></script>
     </body>
