--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,3 +58,27 @@ p {
     min-height: 150px;
     margin-top: 20px;
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    background-color: #222;
+}
+
+.footer img {
+    width: 30px;
+    height: 30px;
+    vertical-align: middle;
+}
+
+.footer a {
+    color: #bbb;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    color: #fff;
+}
