--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
         </div>
         <footer class="footer">
             <a href="https://github.com/bariiss/url-shortener" target="_blank">
-                <img src="/static/img/github.png" alt="GitHub Logo">
+                <img src="/static/img/github.png" alt="GitHub Project">
             </a>
         </footer>
         <script src="https://unpkg.com/htmx.org"></script>
